<resources>
    <string name="app_name">微信</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_addFriends">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_pay">收付款</string>
    <string name="menu_feedback">帮助与反馈</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_me">我</string>
    <string name="tab_find">发现</string>
</resources>
