<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:background="@drawable/tb_lay"
        android:layout_height="60dp">

        <com.weixin.activity.ChangeColorIconWithText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            myview:color1="#ff45c01a"
            myview:icon1="@mipmap/ic_menu_start_conversation"
            myview:text1="@string/app_name"
            myview:text_size1="12sp" />

        <com.weixin.activity.ChangeColorIconWithText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            myview:color1="#ff45c01a"
            myview:icon1="@mipmap/ic_menu_friendslist"
            myview:text1="@string/tab_contact"
            myview:text_size1="12sp" />

        <com.weixin.activity.ChangeColorIconWithText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            myview:color1="#ff45c01a"
            myview:icon1="@mipmap/ic_menu_emoticons"
            myview:text1="@string/tab_find"
            myview:text_size1="12sp" />

        <com.weixin.activity.ChangeColorIconWithText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            myview:color1="#ff45c01a"
            myview:icon1="@mipmap/ic_menu_allfriends"
            myview:text1="@string/tab_me"
            myview:text_size1="12sp" />

    </LinearLayout>
</LinearLayout>
